# enterprise-knowledge-assistant

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/services/: ingestion.py  rag_chain.py  vector_store.py
