[project]
name = "enterprise-knowledge-assistant"
version = "0.1.0"
description = ""
authors = [
    {name = "farihaNaqvi",email = "fariha123.fariha123@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "langchain (>=1.2.3,<2.0.0)",
    "langchain-openai (>=1.1.7,<2.0.0)",
    "chromadb (>=1.4.0,<2.0.0)",
    "boto3 (>=1.42.25,<2.0.0)",
    "python-multipart (>=0.0.21,<0.0.22)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "pypdf (>=6.6.0,<7.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchain-text-splitters (>=1.1.0,<2.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
